src/objects/Opportunity_Sales_Team__c/Opportunity_Sales_Team__c.object-meta.xml
<CustomObject>
    <label>Opportunity Team</label>
    <nameField>
        <displayFormat>OT-{0}</displayFormat>
        <label>Opportunity Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>