src/objects/Opportunity_Sales_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact should be Honeywell Employee (Contact Is Employee = Checked) and Contact Status should be Active</errorMessage>
        <filterItems>
            <field>Contact.Contact_Is_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <infoMessage>Contacts listed are Honeywell Employees</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Sales Teams</relationshipLabel>
    <relationshipName>Opportunity_Sales_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>