src/objects/Opportunity_Sales_Team__c/fields/Created_due_to_CBT__c.field-meta.xml
<CustomField>
    <fullName>Created_due_to_CBT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created due to CBT</label>
    <type>Checkbox</type>
</CustomField>