src/objects/Opportunity_Sales_Team__c/fields/Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>Functional_Role__c</fullName>
    <formula>IF(User__c !=null,text(User__r.Functional_Role__c) ,IF(Contact__c !=null, text(Contact__r.Functional_Role__c) ,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Functional Role</label>
    <type>Text</type>
</CustomField>