src/objects/Opportunity_Sales_Team__c/fields/Opportunity_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Role__c</fullName>
    <inlineHelpText>Only one &quot;Role&quot; representation is allowed for each team.</inlineHelpText>
    <label>Opportunity Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Aerospace Leadership</fullName>
            </value>
            <value>
                <fullName>Aerospace President</fullName>
            </value>
            <value>
                <fullName>AGBM</fullName>
            </value>
            <value>
                <fullName>AMERICAS Sales Leadership</fullName>
            </value>
            <value>
                <fullName>APAC Sales Leadership</fullName>
            </value>
            <value>
                <fullName>Area Sales</fullName>
            </value>
            <value>
                <fullName>Area Sales - Mgt Co</fullName>
            </value>
            <value>
                <fullName>Area Sales – Mgt Co</fullName>
            </value>
            <value>
                <fullName>Area Sales - Operator</fullName>
            </value>
            <value>
                <fullName>Boeing Growth</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>Business Administration India</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Leadership</fullName>
            </value>
            <value>
                <fullName>Business Management AMERICAS</fullName>
            </value>
            <value>
                <fullName>Business Management APAC</fullName>
            </value>
            <value>
                <fullName>Business Management EMEAI</fullName>
            </value>
            <value>
                <fullName>Business Vice President</fullName>
            </value>
            <value>
                <fullName>C&amp;PS</fullName>
            </value>
            <value>
                <fullName>Campaign Mgr</fullName>
            </value>
            <value>
                <fullName>Capture Mgr</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>CBTL</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Clearinghouse</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Contracts Lead</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Customer Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>