src/objects/Opportunity_Sales_Team__c/fields/Team_Member_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Full_Name__c</fullName>
    <formula>IF(User__c !=null, (User__r.FirstName+&apos; &apos;+User__r.LastName) ,IF(Contact__c !=null, (Contact__r.FirstName+&apos; &apos;+Contact__r.LastName) ,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Full Name</label>
    <type>Text</type>
</CustomField>