src/objects/Opportunity_Sales_Team__c/recordTypes/ATR.recordType-meta.xml
<RecordType>
    <fullName>ATR</fullName>
    <active>false</active>
    <label>ATR</label>
</RecordType>