src/objects/Opportunity_Sales_Team__c/recordTypes/BGA.recordType-meta.xml
<RecordType>
    <fullName>BGA</fullName>
    <active>false</active>
    <description>This is for BGA opportunities</description>
    <label>BGA</label>
</RecordType>