src/objects/Opportunity_Sales_Team__c/recordTypes/D_S.recordType-meta.xml
<RecordType>
    <fullName>D_S</fullName>
    <active>true</active>
    <label>Record</label>
</RecordType>