src/objects/Opportunity_Sales_Team__c/validationRules/User_OR_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>User_OR_Contact</fullName>
    <active>false</active>
    <description>This validation rule is to prevent the user from entering either user or contact in a record</description>
    <errorConditionFormula>OR(and(User__c!=null,Contact__c!=null),and(User__c==null,Contact__c==null))</errorConditionFormula>
    <errorMessage>Please select either user or a contact for the opportunity  team</errorMessage>
</ValidationRule>